07-data-processing--02-pandas done

--- a/07-data-processing/02-pandas/02-dataframes/solution.ipynb
+++ b/07-data-processing/02-pandas/02-dataframes/solution.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.037922Z",
+     "start_time": "2024-06-12T14:44:26.625067Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -16,12 +19,24 @@
     "    'Salary': [60000, 75000, 80000, 70000, 65000]\n",
     "}\n",
     "employees = pd.DataFrame(data)\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.046636Z",
+     "start_time": "2024-06-12T14:44:27.039305Z"
+    }
+   },
+   "source": [
+    "# Data Exploration\n",
+    "print(\"First 3 rows of the DataFrame:\")\n",
+    "print(employees.head(3))  # Display first 3 rows\n",
+    "print()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -36,17 +51,21 @@
      ]
     }
    ],
-   "source": [
-    "# Data Exploration\n",
-    "print(\"First 3 rows of the DataFrame:\")\n",
-    "print(employees.head(3))  # Display first 3 rows\n",
-    "print()"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.054320Z",
+     "start_time": "2024-06-12T14:44:27.046636Z"
+    }
+   },
+   "source": [
+    "print(\"Summary statistics for the 'Salary' column:\")\n",
+    "print(employees['Salary'].describe())  # Summary statistics for Salary column\n",
+    "print()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -66,16 +85,21 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Summary statistics for the 'Salary' column:\")\n",
-    "print(employees['Salary'].describe())  # Summary statistics for Salary column\n",
-    "print()"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.060496Z",
+     "start_time": "2024-06-12T14:44:27.055832Z"
+    }
+   },
+   "source": [
+    "print(\"Number of employees in each department:\")\n",
+    "print(employees['Department'].value_counts())  # Count of employees in each department\n",
+    "print()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -93,16 +117,21 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Number of employees in each department:\")\n",
-    "print(employees['Department'].value_counts())  # Count of employees in each department\n",
-    "print()"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.065696Z",
+     "start_time": "2024-06-12T14:44:27.061893Z"
+    }
+   },
+   "source": [
+    "# Data Analysis\n",
+    "print(\"Average salary of employees:\", employees['Salary'].mean())  # Average salary\n",
+    "print()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -113,16 +142,22 @@
      ]
     }
    ],
-   "source": [
-    "# Data Analysis\n",
-    "print(\"Average salary of employees:\", employees['Salary'].mean())  # Average salary\n",
-    "print()"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.073185Z",
+     "start_time": "2024-06-12T14:44:27.066698Z"
+    }
+   },
+   "source": [
+    "max_salary = employees['Salary'].max()\n",
+    "print(\"Employee(s) with the highest salary:\")\n",
+    "print(employees[employees['Salary'] == max_salary])\n",
+    "print()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -135,17 +170,21 @@
      ]
     }
    ],
-   "source": [
-    "max_salary = employees['Salary'].max()\n",
-    "print(\"Employee(s) with the highest salary:\")\n",
-    "print(employees[employees['Salary'] == max_salary])\n",
-    "print()"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.078409Z",
+     "start_time": "2024-06-12T14:44:27.074220Z"
+    }
+   },
+   "source": [
+    "min_avg_salary_dept = employees.groupby('Department')['Salary'].mean().idxmin()\n",
+    "print(\"Department with the lowest average salary:\", min_avg_salary_dept)\n",
+    "print()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -156,16 +195,21 @@
      ]
     }
    ],
-   "source": [
-    "min_avg_salary_dept = employees.groupby('Department')['Salary'].mean().idxmin()\n",
-    "print(\"Department with the lowest average salary:\", min_avg_salary_dept)\n",
-    "print()"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:44:27.083889Z",
+     "start_time": "2024-06-12T14:44:27.078409Z"
+    }
+   },
+   "source": [
+    "employees['Salary Increase'] = employees['Salary'] * 1.1  # Add new column for salary increase\n",
+    "print(\"DataFrame with 'Salary Increase' column:\")\n",
+    "print(employees)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -181,11 +225,7 @@
      ]
     }
    ],
-   "source": [
-    "employees['Salary Increase'] = employees['Salary'] * 1.1  # Add new column for salary increase\n",
-    "print(\"DataFrame with 'Salary Increase' column:\")\n",
-    "print(employees)"
-   ]
+   "execution_count": 9
   }
  ],
  "metadata": {
