--- a/07-data-processing/02-pandas/01-intro-pandas/intro.ipynb
+++ b/07-data-processing/02-pandas/01-intro-pandas/intro.ipynb
@@ -27,12 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:08:14.129104Z",
+     "start_time": "2024-06-12T14:08:13.759270Z"
+    }
+   },
    "source": [
     "import pandas as pd"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -45,13 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:08:25.271415Z",
+     "start_time": "2024-06-12T14:08:25.267500Z"
+    }
+   },
    "source": [
     "# Creating a Pandas Series\n",
     "my_series = pd.Series({'London':10, 'Tripoli':100, 'Cairo':10})"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -62,8 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:08:29.365801Z",
+     "start_time": "2024-06-12T14:08:29.359535Z"
+    }
+   },
+   "source": [
+    "# Displaying the Series\n",
+    "my_series"
+   ],
    "outputs": [
     {
      "data": {
@@ -74,15 +92,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Displaying the Series\n",
-    "my_series"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -93,8 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:08:36.869856Z",
+     "start_time": "2024-06-12T14:08:36.866266Z"
+    }
+   },
+   "source": [
+    "# Accessing a specific element in the Series\n",
+    "my_series['Tripoli']"
+   ],
    "outputs": [
     {
      "data": {
@@ -102,15 +125,12 @@
        "100"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Accessing a specific element in the Series\n",
-    "my_series['Tripoli']"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -121,8 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T14:09:51.176281Z",
+     "start_time": "2024-06-12T14:09:51.163192Z"
+    }
+   },
+   "source": [
+    "# Filtering elements based on a condition\n",
+    "my_series[my_series > 10]"
+   ],
    "outputs": [
     {
      "data": {
@@ -131,15 +159,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Filtering elements based on a condition\n",
-    "my_series[my_series > 10]"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
