--- a/07-data-processing/02-pandas/05-visualization/solution.ipynb
+++ b/07-data-processing/02-pandas/05-visualization/solution.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T17:25:02.772898Z",
+     "start_time": "2024-06-12T17:25:02.769544Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -16,20 +19,114 @@
     "    'Price': [1200, 800, 400, 100, 300],\n",
     "    'Quantity_Sold': [50, 100, 80, 200, 120]\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T17:25:03.606246Z",
+     "start_time": "2024-06-12T17:25:03.592712Z"
+    }
+   },
    "source": [
     "# Task 1: DataFrame Creation\n",
     "products = pd.DataFrame(data)\n",
     "\n",
     "# Displaying the DataFrame\n",
     "products"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Product_ID Product_Name     Category  Price  Quantity_Sold\n",
+       "0         101       Laptop  Electronics   1200             50\n",
+       "1         102   Smartphone  Electronics    800            100\n",
+       "2         103       Tablet  Electronics    400             80\n",
+       "3         104   Headphones  Accessories    100            200\n",
+       "4         105   Smartwatch  Electronics    300            120"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Product_Name</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Quantity_Sold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>800</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Tablet</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>400</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>Headphones</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Smartwatch</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>300</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
