--- a/07-data-processing/05-more_exercises/TMDB-movies_student.ipynb
+++ b/07-data-processing/05-more_exercises/TMDB-movies_student.ipynb
@@ -16,30 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\u0167016\\AppData\\Local\\Temp\\ipykernel_23824\\1918211268.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T15:22:14.214675Z",
+     "start_time": "2024-06-12T15:22:13.543665Z"
     }
-   ],
+   },
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as md\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
